--- a/WorkoutTracker.API/appsettings.json
+++ b/WorkoutTracker.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:severworkout.database.windows.net,1433;Initial Catalog=Workouttracker;Persist Security Info=False;User ID=sqladmin;Password=@MeunomeFacil;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:severworkout.database.windows.net,1433;Initial Catalog=Workouttracker;Persist Security Info=False;User ID=sqladmin;Password=@MeunomeFacil;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
